fixed z-indexes css

--- a/public/css/boilerplate.css
+++ b/public/css/boilerplate.css
@@ -171,7 +171,7 @@ footer {
 	color: var(--text-clr);
 	width: 100%;
 	bottom: 0;
-	z-index: 9999;
+	z-index: 9998;
 }
 
 /* GENERIC CLASES */
